gcc/testsuite/rust/rustc/ui/parser/issues/issue-58856-1.rs
impl A {
    fn b(self>
} // { dg-error "" "" { target *-*-* } }

fn main() {}

